--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
-fastapi>=0.68.0
-uvicorn>=0.15.0
-pydantic>=1.8.2
+fastapi==0.104.1
+uvicorn==0.24.0
+pydantic==2.5.1
 transformers>=4.30.0
 torch>=2.0.0
 numpy>=1.21.0
 pandas>=1.3.0
 scikit-learn>=0.24.2
-python-dotenv>=0.19.0
-sqlalchemy>=1.4.0
+python-dotenv==1.0.0
+sqlalchemy==2.0.23
 pytest>=6.2.5
 httpx>=0.23.0
-python-multipart>=0.0.5 
+python-multipart>=0.0.5
+psycopg2-binary==2.9.9
+alembic==1.12.1 
